added calendar markup and style

--- a/index.html
+++ b/index.html
@@ -25,5 +25,68 @@
       </div>
       <button class="btn btn--landscape current-day__btn">Change Theme</button>
     </section>
+    <section class="calendar">
+      <h1 id="app-name-portrait" class="calendar__title">My Calendar</h1>
+      <div class="calendar__wrapper">
+        <div class="calendar__header">
+          <div class="calendar__year">2021</div>
+          <div class="calendar__navigation">
+            <div class="calendar__prev-month"><i class="fas fa-caret-left"></i></div>
+            <div class="calendar__month">December</div>
+            <div class="calendar__next-month"><i class="fas fa-caret-right"></i></div>
+          </div>
+        </div>
+
+        <div class="calendar__table">
+          <div class="calendar__day">Sun</div>
+          <div class="calendar__day">Mon</div>
+          <div class="calendar__day">Tue</div>
+          <div class="calendar__day">Wed</div>
+          <div class="calendar__day">Thu</div>
+          <div class="calendar__day">Fri</div>
+          <div class="calendar__day">Sat</div>
+          <div class="calendar__number calendar__number--off"><div class="calendar__day-number"></div></div>
+          <div class="calendar__number calendar__number--off"><div class="calendar__day-number"></div></div>
+          <div class="calendar__number calendar__number--off"><div class="calendar__day-number"></div></div>
+          <div class="calendar__number calendar__number--off"><div class="calendar__day-number"></div></div>
+          <div class="calendar__number"><div class="calendar__day-number">1</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">2</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">3</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">4</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">5</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">6</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">7</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">8</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">9</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">10</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">11</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">12</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">13</div></div>
+          <div class="calendar__number calendar__number--selected"><div class="calendar__day-number">14</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">15</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">16</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">17</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">18</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">19</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">20</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">21</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">22</div></div>
+          <div class="calendar__number calendar__number--active"><div class="calendar__day-number">23</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">24</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">25</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">26</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">27</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">28</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">29</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">30</div></div>
+          <div class="calendar__number"><div class="calendar__day-number">31</div></div>
+        </div>
+      </div>
+
+      <div class="calendar__button">
+        <button class="btn btn--primary btn--portrait">Change Theme</button>
+      </div>
+    </section>
+
   </body>
 </html>
