--- a/index.html
+++ b/index.html
@@ -52,13 +52,21 @@
           <div class="calendar__number"><div class="calendar__day-number">1</div></div>
           <div class="calendar__number"><div class="calendar__day-number">2</div></div>
           <div class="calendar__number"><div class="calendar__day-number">3</div></div>
-          <div class="calendar__number"><div class="calendar__day-number">4</div></div>
+          <div class="calendar__number calendar__number--has-tooltip">
+            <div class="calendar__day-number">4</div>
+            <img src="images/note2.png" alt="Note">
+            <span>This is a pretty good note.</span>
+          </div>
           <div class="calendar__number"><div class="calendar__day-number">5</div></div>
           <div class="calendar__number"><div class="calendar__day-number">6</div></div>
           <div class="calendar__number"><div class="calendar__day-number">7</div></div>
           <div class="calendar__number"><div class="calendar__day-number">8</div></div>
           <div class="calendar__number"><div class="calendar__day-number">9</div></div>
-          <div class="calendar__number"><div class="calendar__day-number">10</div></div>
+          <div class="calendar__number calendar__number--has-tooltip">
+            <div class="calendar__day-number">10</div>
+            <img src="images/note1.png" alt="Note">
+            <span>This is a pretty good note.</span>
+          </div>
           <div class="calendar__number"><div class="calendar__day-number">11</div></div>
           <div class="calendar__number"><div class="calendar__day-number">12</div></div>
           <div class="calendar__number"><div class="calendar__day-number">13</div></div>
