added css dialog and color chooser components

--- a/index.html
+++ b/index.html
@@ -96,5 +96,65 @@
       </div>
     </section>
 
+    <dialog class="dialog" open>
+      <div class="dialog__popup">
+        <div class="color-chooser">
+          <h3>What's your favorite color?</h3>
+          <div class="color-chooser__color-options">
+
+            <div class="color-chooser__color-option color-chooser__color-option--blue">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Blue</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--red">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Red</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--purple">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Purple</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--green">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Green</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--orange">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Orange</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--deep-orange">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Deep Orange</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--baby-blue">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Baby Blue</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--cerise">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Cerise</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--lime">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Lime</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--teal">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Teal</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--pink">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Pink</h4>
+            </div>
+            <div class="color-chooser__color-option color-chooser__color-option--black">
+              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <h4>Black</h4>
+            </div>
+          </div>
+        </div>
+        <button class="btn btn--black">Update</button>
+      </div>
+    </dialog>
+
   </body>
 </html>
