--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       </div>
     </section>
 
-    <dialog class="dialog" open>
+    <dialog class="dialog">
       <div class="dialog__popup">
-        <div class="color-chooser">
+        <div class="color-chooser" hidden>
           <h3>What's your favorite color?</h3>
           <div class="color-chooser__color-options">
 
@@ -151,8 +151,16 @@
               <h4>Black</h4>
             </div>
           </div>
+          <button class="btn btn--black">Update</button>
         </div>
-        <button class="btn btn--black">Update</button>
+        <div class="note-editor" hidden>
+          <h3>Add a note to the calendar</h3>
+          <textarea class="note-editor__textarea" name="post-it"></textarea>
+          <div class="note-editor__buttons">
+            <button class="btn btn--black">Post it</button><button class="btn btn--danger">Delete it</button>
+          </div>
+        </div>
+
       </div>
     </dialog>
 
