refactored js in modules; started Modal js module

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1 id="app-name-landscape" class="current-day__title">My Calendar</h1>
       <div class="current-day__heading">
         <h2 id="cur-year" class="current-day__subtitle">2021</h2>
-        <h3 id="cur-day" class="current-day__day-info">Monday</h3>
+        <h3 id="cur-day-week" class="current-day__day-info">Monday</h3>
         <h3 id="cur-month" class="current-day__day-info">June</h3>
-        <h3 id="cur-date" class="current-day__day-info">7</h3>
+        <h3 id="cur-day" class="current-day__day-info">7</h3>
       </div>
       <button class="btn btn--landscape current-day__btn">Change Theme</button>
     </section>
@@ -101,7 +101,6 @@
         <div class="color-chooser" hidden>
           <h3>What's your favorite color?</h3>
           <div class="color-chooser__color-options">
-
             <div class="color-chooser__color-option color-chooser__color-option--blue">
               <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Blue</h4>
