added ColorChooser module; refined Modal module; added keyboard navigation only if popup is not visible

--- a/index.html
+++ b/index.html
@@ -102,51 +102,51 @@
           <h3>What's your favorite color?</h3>
           <div class="color-chooser__color-options">
             <div class="color-chooser__color-option color-chooser__color-option--blue">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="blue" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Blue</h4>
             </div>
-            <div class="color-chooser__color-option color-chooser__color-option--red">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+            <div class="color-chooser__color-option color-chooser__color-option--red color-chooser__color-option--selected">
+              <div data-selected-color="red" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Red</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--purple">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="purple" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Purple</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--green">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="green" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Green</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--orange">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="orange" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Orange</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--deep-orange">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="deep-orange" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Deep Orange</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--baby-blue">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="baby-blue" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Baby Blue</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--cerise">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="cerise" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Cerise</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--lime">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="lime" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Lime</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--teal">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="teal" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Teal</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--pink">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="pink" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Pink</h4>
             </div>
             <div class="color-chooser__color-option color-chooser__color-option--black">
-              <div class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
+              <div data-selected-color="black" class="color-chooser__color-preview"><i class="fas fa-check"></i></div>
               <h4>Black</h4>
             </div>
           </div>
