corrected interface problems with modal animations events; color-chooser sets default blue color

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
     <dialog class="dialog">
       <div class="dialog__popup">
+        <i class="far fa-times-circle" aria-hidden="true"></i>
         <div class="color-chooser" hidden>
           <h3>What's your favorite color?</h3>
           <div class="color-chooser__color-options">
